; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_radeon_display.c_radeon_framebuffer_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_radeon_display.c_radeon_framebuffer_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }
%struct.radeon_framebuffer = type { %struct.drm_gem_object*, i32 }
%struct.drm_mode_fb_cmd2 = type { i32 }
%struct.drm_gem_object = type { i32 }

@radeon_fb_funcs = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @radeon_framebuffer_init(%struct.drm_device* %0, %struct.radeon_framebuffer* %1, %struct.drm_mode_fb_cmd2* %2, %struct.drm_gem_object* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.drm_device*, align 8
  %7 = alloca %struct.radeon_framebuffer*, align 8
  %8 = alloca %struct.drm_mode_fb_cmd2*, align 8
  %9 = alloca %struct.drm_gem_object*, align 8
  %10 = alloca i32, align 4
  store %struct.drm_device* %0, %struct.drm_device** %6, align 8
  store %struct.radeon_framebuffer* %1, %struct.radeon_framebuffer** %7, align 8
  store %struct.drm_mode_fb_cmd2* %2, %struct.drm_mode_fb_cmd2** %8, align 8
  store %struct.drm_gem_object* %3, %struct.drm_gem_object** %9, align 8
  %11 = load %struct.drm_gem_object*, %struct.drm_gem_object** %9, align 8
  %12 = load %struct.radeon_framebuffer*, %struct.radeon_framebuffer** %7, align 8
  %13 = getelementptr inbounds %struct.radeon_framebuffer, %struct.radeon_framebuffer* %12, i32 0, i32 0
  store %struct.drm_gem_object* %11, %struct.drm_gem_object** %13, align 8
  %14 = load %struct.radeon_framebuffer*, %struct.radeon_framebuffer** %7, align 8
  %15 = getelementptr inbounds %struct.radeon_framebuffer, %struct.radeon_framebuffer* %14, i32 0, i32 1
  %16 = load %struct.drm_mode_fb_cmd2*, %struct.drm_mode_fb_cmd2** %8, align 8
  %17 = call i32 @drm_helper_mode_fill_fb_struct(i32* %15, %struct.drm_mode_fb_cmd2* %16)
  %18 = load %struct.drm_device*, %struct.drm_device** %6, align 8
  %19 = load %struct.radeon_framebuffer*, %struct.radeon_framebuffer** %7, align 8
  %20 = getelementptr inbounds %struct.radeon_framebuffer, %struct.radeon_framebuffer* %19, i32 0, i32 1
  %21 = call i32 @drm_framebuffer_init(%struct.drm_device* %18, i32* %20, i32* @radeon_fb_funcs)
  store i32 %21, i32* %10, align 4
  %22 = load i32, i32* %10, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %4
  %25 = load %struct.radeon_framebuffer*, %struct.radeon_framebuffer** %7, align 8
  %26 = getelementptr inbounds %struct.radeon_framebuffer, %struct.radeon_framebuffer* %25, i32 0, i32 0
  store %struct.drm_gem_object* null, %struct.drm_gem_object** %26, align 8
  %27 = load i32, i32* %10, align 4
  store i32 %27, i32* %5, align 4
  br label %29

28:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %29

29:                                               ; preds = %28, %24
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i32 @drm_helper_mode_fill_fb_struct(i32*, %struct.drm_mode_fb_cmd2*) #1

declare dso_local i32 @drm_framebuffer_init(%struct.drm_device*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
